# superstem_plugins

./: DialogDMH.py  MenuDMH.py  PanelDMH.py  QuickDMexport.py  README.md  SuperSTEM.py  __init__.py  setup.cfg  superstem_customisation.json
nionswift_plugin/superstem/: Application.py  DialogDMH.py  MenuDMH.py  SuperSTEM.py  __init__.py  compress.bat  key_config.json  menu_config.json  newHashes.bat
nionswift_plugin/superstem/utils/: easy-install.pth.bak  superstem0plugins.egg-link.bak
