[metadata]
name = superstem_plugins
version = 0.0.1
author = DMH
author_email = dorothea@superstem.org
description = Swift plugins for superstem.

[options]
packages = find_namespace:
python_requires = >=3.8,<3.11
install_requires =
    nionswift>=0.15.0
    nionui>=0.6.3

[options.packages.find]
include =
    nionswift_plugin
    nionswift_plugin.superstem

[options.package_data]
nionswift_plugin.superstem =
    resources/superstem_customization.json
